<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/define_dimen_12"
    tools:ignore="ContentDescription">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_image"
        android:layout_width="@dimen/define_dimen_100"
        android:layout_height="@dimen/define_dimen_80"
        android:layout_centerVertical="true"
        app:cardCornerRadius="@dimen/define_dimen_6">

        <ImageView
            android:id="@+id/img_food_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginEnd="@dimen/define_dimen_5"
        android:layout_toStartOf="@+id/tv_delete"
        android:layout_toEndOf="@+id/layout_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_food_name_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_food_price_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_subtract"
                android:layout_width="@dimen/define_dimen_30"
                android:layout_height="@dimen/define_dimen_30"
                android:background="@drawable/bg_white_shape_border_gray"
                android:gravity="center"
                android:text="@string/label_sub"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="@dimen/define_dimen_30"
                android:layout_height="@dimen/define_dimen_30"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_shape_border_red_corner_3"
                android:gravity="center"
                android:text="@string/label_quantity_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="@dimen/define_dimen_30"
                android:layout_height="@dimen/define_dimen_30"
                android:background="@drawable/bg_white_shape_border_gray"
                android:gravity="center"
                android:text="@string/label_add"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="@dimen/define_dimen_60"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_red_shape_corner_6"
        android:gravity="center"
        android:padding="@dimen/define_dimen_10"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />
</RelativeLayout>
