<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:viewBindingIgnore="true"
    android:padding="@dimen/define_dimen_16">

    <RelativeLayout
        android:id="@+id/layout_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_image"
            android:layout_width="@dimen/define_dimen_100"
            android:layout_height="@dimen/define_dimen_80"
            android:layout_centerVertical="true"
            app:cardCornerRadius="@dimen/define_dimen_6">

            <ImageView
                android:id="@+id/img_food_cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/define_dimen_10"
            android:layout_toEndOf="@+id/layout_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_food_name_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_food_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_subtract"
                    android:layout_width="@dimen/define_dimen_30"
                    android:layout_height="@dimen/define_dimen_30"
                    android:background="@drawable/bg_white_shape_border_gray"
                    android:gravity="center"
                    android:text="@string/label_sub"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="@dimen/define_dimen_30"
                    android:layout_height="@dimen/define_dimen_30"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:background="@drawable/bg_white_shape_border_red_corner_3"
                    android:gravity="center"
                    android:text="@string/label_quantity_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="@dimen/define_dimen_30"
                    android:layout_height="@dimen/define_dimen_30"
                    android:background="@drawable/bg_white_shape_border_gray"
                    android:gravity="center"
                    android:text="@string/label_add"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_infor"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/define_dimen_16">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/define_dimen_16"
            android:paddingEnd="@dimen/define_dimen_16"
            android:background="@drawable/bg_gray_shape_corner_6"
            android:gravity="center"
            android:layout_marginEnd="@dimen/define_dimen_10"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/cancel"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_add_cart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_green_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>
