<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="Autofill,LabelFor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:textSize="18.5dp"
            android:textStyle="bold"
            android:text="Hãy cho chúng tôi biết cảm nhận, đánh giá của bạn về việc thưởng thức sản phẩm. Chúng tôi sẽ cố gắng khắc phục và luôn đem lại những điều tuyệt vời hơn đến với bạn 💌"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_phone"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_comment"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/define_dimen_80"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:maxLength="1000"
            android:inputType="textMultiLine"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_send_feedback"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_red_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_12"
            android:text="@string/send_feedback"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:text="©2023 FK ENTERTAINMENT"
                android:textColor="@color/orangePrimary"
                android:textSize="30px"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

