<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill,LabelFor"
    android:background="@color/white"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/bungee_regular"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_70"
            android:layout_marginStart="@dimen/dimen_20"
            />


        <LinearLayout
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/si_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:layout_marginEnd="@dimen/dimen_20"
                    android:background="@drawable/bg_white_shape_border_red_corner_6"
                    android:padding="@dimen/dimen_18" />
                <TextView
                    android:padding="@dimen/dimen_4"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginLeft="@dimen/dimen_40"
                    android:layout_marginTop="@dimen/dimen_5" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/si_password"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:layout_height="60dp"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_20"
                    android:layout_marginEnd="@dimen/dimen_20"
                    android:background="@drawable/bg_white_shape_border_red_corner_6"
                    android:inputType="textPassword"
                    android:padding="@dimen/dimen_18" />
                <TextView
                    android:padding="@dimen/dimen_4"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginLeft="@dimen/dimen_40"
                    android:layout_marginTop="@dimen/dimen_5"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/ll_forget_password"

                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_2"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/red"
                        android:textStyle="bold|italic"
                        android:textSize="@dimen/dimen_14"/>
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow_right"/>
                </LinearLayout>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_sign_in"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_yellow_shape_corner_6"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginEnd="@dimen/dimen_20"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_18"/>



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_not_account"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:textSize="@dimen/dimen_14" />
    </LinearLayout>

</RelativeLayout>